misc/openapi-ballerina/modules/openapi-validator/src/test/resources/project-based-tests/src/recordValidation/ballerina/validTests/validTypeMisMatchNestedArrayType.bal
import ballerina/http;

type ValidTypeMisMatchNestedArray record {
    int id;
    string username;
    string firstName;
    string lastName;
    string email;
    string password;
    int [][][][] phone;
    int userStatus;
};

service hello on new http:Listener(9090) {

    resource function sayHello(http:Caller caller,
        http:Request req, ValidTypeMisMatchNestedArray body ) returns error? {
    }
}

